--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "material-icons": "^1.13.12",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
