--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "firebase": "^10.12.0",
     "material-icons": "^1.13.12",
+    "ngx-toastr": "^15.2.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^14.2.3",
